# grading

./: .gitignore  .prettierrc  Bootup.java  CLAUDE.md  Commit.java  ConcurrentImageSaver.java  ConcurrentTester.java  DaemonThreads.java  Format.java  ImageSaver.java  Makefile  PathClassLoader.java  README.md  Repo.java  Result.java  Speedrun.java  TODO.md  TestSha.java  UNTRACKED.md  WithTimeouts.java  actual-schema.sql  add-assignment.js  add-override.js  api.js  app.js  average-commits.js  backup-db  biome.json  check-reformats.sh  cleanup.sql  compare-dom.js  compare-grades.js  count-questions.js  csa-schema.sql  db-smoke-test.js  dump-grades.js  dump-grades.py  eng-schema.sql  file-history.js  get-answers.py  (+58 more)
exports/: Makefile  tsvs
mcqs/: abstraction.mcqs
modules/: assignments.js  bell-schedule.js  fetch-helpers.js  grading.js  image-refactoring.js  lcs.js  mdfilter.js  pugly.sql  queries.sql  repo.js  speedruns.js  test-javascript.js  util.js
plans/: eliminate-local-bhs-cs-access.md  gradebook-web-app.md  image-refactoring-grader.md  js-unit-test-grading-in-server.md  llm-assisted-free-response-scoring.md  quiz-scoring.md  track-git-commits-in-quiz-answers.md
plans/done/: DONE.md  checklist-grader.md  java-auto-grader.md  speedrun-grading-ui.md
public/css/: app.css  coding.css  prompt-responses.css
public/js/: column-filter.js  n-of-m-cell.js  prompt-responses.js  row-highlight.js
reports/: script-cleanup.md
sql/: grades.sql
views/: coding.njk  index.njk
views/app/: ad-hoc-mastery.njk  assigned-add-form.njk  assigned-tbody.njk  assigned.njk  (+17 more)
(+87 files in other folders)
