[project]
name = "grading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pugsql>=0.3.5",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "ruff>=0.12.10",
]

[dependency-groups]
dev = [
    "ruff>=0.12.10",
]
